# Laboratories-3

./: MatrixFunction.cpp  MatrixFunction.h  README.md  listFunctions.cpp  listFunctions.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Lab3/: CMakeLists.txt  main.cpp  report.txt
lab1/: CMakeLists.txt  ListFunctions.cpp  ListFunctions.h  MatrixFunctions.cpp  MatrixFunctions.h  main.cpp
lab2/: mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled1.pro
